deploy/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tracing
---
apiVersion: v1
kind: Namespace
metadata:
  name: logging
---
apiVersion: v1
kind: Namespace
metadata:
  name: tns
